force-app/main/default/objects/Training_Event__c/fields/Instructor_Type__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Type__c</fullName>
    <label>Instructor Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prosci</fullName>
            </value>
            <value>
                <fullName>Prosci Australia</fullName>
            </value>
            <value>
                <fullName>Prosci Brasil</fullName>
            </value>
            <value>
                <fullName>Prosci Canada</fullName>
            </value>
            <value>
                <fullName>Prosci Europe</fullName>
            </value>
            <value>
                <fullName>Primary Affiliate</fullName>
            </value>
            <value>
                <fullName>TTT</fullName>
            </value>
            <value>
                <fullName>Internal PCAI</fullName>
            </value>
            <value>
                <fullName>Coach the trainer (Prosci Canada)</fullName>
            </value>
            <value>
                <fullName>Exception</fullName>
            </value>
            <value>
                <fullName>Authorized Training Provider</fullName>
            </value>
            <value>
                <fullName>PCAI Not Current</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>