force-app/main/default/objects/Training_Event__c/fields/Invoicing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Notes__c</fullName>
    <label>Invoicing Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>