force-app/main/default/objects/Training_Event__c/fields/Karaoke_Contact_Information_19__c.field-meta.xml
<CustomField>
    <fullName>Karaoke_Contact_Information_19__c</fullName>
    <label>Karaoke Contact Information</label>
    <type>TextArea</type>
</CustomField>