force-app/main/default/objects/Training_Event__c/fields/Karaoke_Contact_Information__c.field-meta.xml
<CustomField>
    <fullName>Karaoke_Contact_Information__c</fullName>
    <formula>End_User_Company__r.Karaoke_Contact_Information__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Karaoke Contact Information OBS</label>
    <type>Text</type>
</CustomField>