force-app/main/default/objects/Training_Event__c/fields/Karaoke_Room_19__c.field-meta.xml
<CustomField>
    <fullName>Karaoke_Room_19__c</fullName>
    <label>Karaoke Room</label>
    <type>TextArea</type>
</CustomField>