force-app/main/default/objects/Training_Event__c/fields/Karaoke_Room__c.field-meta.xml
<CustomField>
    <fullName>Karaoke_Room__c</fullName>
    <formula>End_User_Company__r.Karaoke_Room__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Karaoke Room OBS</label>
    <type>Text</type>
</CustomField>