force-app/main/default/objects/Training_Event__c/fields/Kick_Off_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Kick_Off_Meeting__c</fullName>
    <label>Kick Off Meeting</label>
    <type>Date</type>
</CustomField>