force-app/main/default/objects/Training_Event__c/fields/Latitude_MapAnything__c.field-meta.xml
<CustomField>
    <fullName>Latitude_MapAnything__c</fullName>
    <label>Latitude (MapAnything)</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>