force-app/main/default/objects/Training_Event__c/fields/Lodging_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Lodging_Requirements__c</fullName>
    <inlineHelpText>These are the requirements we must follow when booking a hotel in order for Prosci to be reimbursed in full.</inlineHelpText>
    <label>Lodging Requirements</label>
    <type>TextArea</type>
</CustomField>