force-app/main/default/objects/Training_Event__c/fields/Logistics_Contact_2__c.field-meta.xml
<CustomField>
    <fullName>Logistics_Contact_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Logistics Contact 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Training Events (Logistics Contact 2)</relationshipLabel>
    <relationshipName>Training_Events8</relationshipName>
    <type>Lookup</type>
</CustomField>