force-app/main/default/objects/Training_Event__c/fields/Logistics_Contact__c.field-meta.xml
<CustomField>
    <fullName>Logistics_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Logistics Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Training Events (Logistics Contact)</relationshipLabel>
    <relationshipName>Training_Events3</relationshipName>
    <type>Lookup</type>
</CustomField>