force-app/main/default/objects/Training_Event__c/fields/Logistics_Notes__c.field-meta.xml
<CustomField>
    <fullName>Logistics_Notes__c</fullName>
    <formula>End_User_Company__r.Logistics_Notes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logistics Notes</label>
    <type>Text</type>
</CustomField>