force-app/main/default/objects/Training_Event__c/fields/Longitude_MapAnything__c.field-meta.xml
<CustomField>
    <fullName>Longitude_MapAnything__c</fullName>
    <label>Longitude (MapAnything)</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>