force-app/main/default/objects/Training_Event__c/fields/Lunches_19__c.field-meta.xml
<CustomField>
    <fullName>Lunches_19__c</fullName>
    <label>Lunches</label>
    <type>TextArea</type>
</CustomField>