force-app/main/default/objects/Training_Event__c/fields/Lunches__c.field-meta.xml
<CustomField>
    <fullName>Lunches__c</fullName>
    <formula>End_User_Company__r.Lunches__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lunches OBS</label>
    <type>Text</type>
</CustomField>