force-app/main/default/objects/Training_Event__c/fields/Managers_and_supervisors__c.field-meta.xml
<CustomField>
    <fullName>Managers_and_supervisors__c</fullName>
    <label>Managers and supervisors</label>
    <length>5</length>
    <type>Text</type>
</CustomField>