force-app/main/default/objects/Training_Event__c/fields/Material_Invoice_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Material_Invoice_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material/Invoice Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Training Events (Material/Invoice Opportunity)</relationshipLabel>
    <relationshipName>Training_Events1</relationshipName>
    <type>Lookup</type>
</CustomField>