force-app/main/default/objects/Training_Event__c/fields/Material_Type__c.field-meta.xml
<CustomField>
    <fullName>Material_Type__c</fullName>
    <description>This field will be used by CAN to track what type of materials their government clients are requesting. This couldn&apos;t be done by the Individual Materials not needed box alone as that can also be used for sending bulk orders out so it wasn&apos;t giving the reporting details they are looking for.</description>
    <inlineHelpText>Select the type of material requested for this program.</inlineHelpText>
    <label>Material Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hard Copy</fullName>
            </value>
            <value>
                <fullName>Electronic</fullName>
            </value>
            <value>
                <fullName>Misc Kits</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>