force-app/main/default/objects/Training_Event__c/fields/Max_Date__c.field-meta.xml
<CustomField>
    <fullName>Max_Date__c</fullName>
    <description>Date when the number of registrations became equal to or greater than projected attendance</description>
    <inlineHelpText>Date when the number of registrations became equal to or greater than projected attendance</inlineHelpText>
    <label>Max Date</label>
    <type>Date</type>
</CustomField>