force-app/main/default/objects/Training_Event__c/fields/Meeting_Room_19__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Room_19__c</fullName>
    <label>Meeting Room</label>
    <type>TextArea</type>
</CustomField>