force-app/main/default/objects/Training_Event__c/fields/Meeting_Room__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Room__c</fullName>
    <formula>End_User_Company__r.Meeting_Room__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting Room OBS</label>
    <type>Text</type>
</CustomField>