force-app/main/default/objects/Training_Event__c/fields/Name_of_Resource_1__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Resource_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name of Resource 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Training_Events3</relationshipName>
    <type>Lookup</type>
</CustomField>