force-app/main/default/objects/Training_Event__c/fields/Name_of_Resource_2__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Resource_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Name of Resource 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Training_Events4</relationshipName>
    <type>Lookup</type>
</CustomField>