force-app/main/default/objects/Training_Event__c/fields/NMSO_Quarter__c.field-meta.xml
<CustomField>
    <fullName>NMSO_Quarter__c</fullName>
    <description>This field was created for reporting purposes only. 

Prosci Canada needs to group TRAINING EVENT data into the Federal Government Quarters (Eg. Q1 2016, Q2 2017 etc.).  The Canadian government uses a April 1 to March 31st year.</description>
    <formula>IF(MONTH( Start_Date__c )&gt; 3 ,  


CASE(YEAR( Start_Date__c ), 
2007, &quot;2007&quot;, 
2008, &quot;2008&quot;, 
2009, &quot;2009&quot;, 
2010, &quot;2010&quot;, 
2011, &quot;2011&quot;, 
2012, &quot;2012&quot;, 
2013, &quot;2013&quot;, 
2014, &quot;2014&quot;, 
2015, &quot;2015&quot;, 
2016, &quot;2016&quot;, 
2017, &quot;2017&quot;, 
2018, &quot;2018&quot;, 
2019, &quot;2019&quot;, 
2020, &quot;2020&quot;,
2021, &quot;2021&quot;, 
2022, &quot;2022&quot;, 
2023, &quot;2023&quot;, 
2024, &quot;2024&quot;,
2025, &quot;2025&quot;,
2025, &quot;2026&quot;, 
2027, &quot;2027&quot;, 
2028, &quot;2028&quot;, 
2029, &quot;2029&quot;,
2030, &quot;2030&quot;,    
&quot;None&quot;)


, 

CASE(YEAR( Start_Date__c ), 
2007, &quot;2006&quot; , 
2008, &quot;2007&quot;, 
2009, &quot;2008&quot;, 
2010, &quot;2009&quot;, 
2011, &quot;2010&quot;, 
2012, &quot;2011&quot;, 
2013, &quot;2012&quot;, 
2014, &quot;2013&quot;, 
2015, &quot;2014&quot;, 
2016, &quot;2015&quot;, 
2017, &quot;2016&quot;, 
2018, &quot;2017&quot;, 
2019, &quot;2018&quot;, 
2020, &quot;2019&quot;,
2021, &quot;2020&quot;, 
2022, &quot;2021&quot;, 
2023, &quot;2022&quot;, 
2024, &quot;2023&quot;,
2025, &quot;2024&quot;,
2025, &quot;2025&quot;, 
2027, &quot;2026&quot;, 
2028, &quot;2027&quot;, 
2029, &quot;2028&quot;,
2030, &quot;2029&quot;,
2031, &quot;2030&quot;,
&quot;None&quot;)

)

&amp; &quot;-&quot; 

&amp;CASE(MONTH( Start_Date__c ), 
1, &quot;Q4&quot; , 
2, &quot;Q4&quot;, 
3, &quot;Q4&quot;, 
4, &quot;Q1&quot;, 
5, &quot;Q1&quot;, 
6, &quot;Q1&quot;, 
7, &quot;Q2&quot;, 
8, &quot;Q2&quot;, 
9, &quot;Q2&quot;, 
10, &quot;Q3&quot;, 
11, &quot;Q3&quot;, 
12, &quot;Q3&quot;, 
&quot;None&quot;)</formula>
    <inlineHelpText>This field defines when the program took place (what Quarter/Year). Canadian Government fiscal year: April 1 - March 31st</inlineHelpText>
    <label>NMSO Quarter</label>
    <type>Text</type>
</CustomField>