force-app/main/default/objects/Training_Event__c/fields/No_of_Cancelled_Trainees__c.field-meta.xml
<CustomField>
    <fullName>No_of_Cancelled_Trainees__c</fullName>
    <label>No of Cancelled Trainees</label>
    <summaryFilterItems>
        <field>Associated_Training_Contacts__c.Status__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Associated_Training_Contacts__c.Training_Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>