force-app/main/default/objects/Training_Event__c/fields/No_of_Participants_Oversold__c.field-meta.xml
<CustomField>
    <fullName>No_of_Participants_Oversold__c</fullName>
    <description>Number of Participants we have oversold by</description>
    <formula>(No_of_Pending__c +   No_of_Trainees__c ) - Projected_Attendance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of Participants we have oversold by</inlineHelpText>
    <label>No of Participants Oversold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>