force-app/main/default/objects/Training_Event__c/fields/No_of_Training_Days__c.field-meta.xml
<CustomField>
    <fullName>No_of_Training_Days__c</fullName>
    <description>Calculates the number of days a training event is being held for.</description>
    <formula>(5 * ( FLOOR( (End_Date__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD(End_Date__c - DATE( 1900, 1, 8), 7 ) ) ) 
- 
(5 * ( FLOOR( (Start_Date__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD(Start_Date__c - DATE( 1900, 1, 8), 7 ) ) ) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Training Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>