force-app/main/default/objects/Training_Event__c/fields/No_Welcome_Email__c.field-meta.xml
<CustomField>
    <fullName>No_Welcome_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if you don&apos;t want to send a welcome email to anyone on the program.</inlineHelpText>
    <label>No Welcome Email</label>
    <type>Checkbox</type>
</CustomField>