force-app/main/default/objects/Training_Event__c/fields/Number_of_Breakout_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Breakout_Rooms__c</fullName>
    <label>Number of Breakout Rooms</label>
    <length>2</length>
    <type>Text</type>
</CustomField>