force-app/main/default/objects/Training_Event__c/fields/of_Contracted_rooms__c.field-meta.xml
<CustomField>
    <fullName>of_Contracted_rooms__c</fullName>
    <label># of Contracted rooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>