force-app/main/default/objects/Training_Event__c/fields/of_Portal_tools_for_event__c.field-meta.xml
<CustomField>
    <fullName>of_Portal_tools_for_event__c</fullName>
    <label># of Portal tools for event</label>
    <summaryForeignKey>Training_Event_Product__c.Training_Event__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>