force-app/main/default/objects/Training_Event__c/fields/Omit_from_Payroll__c.field-meta.xml
<CustomField>
    <fullName>Omit_from_Payroll__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box on joint training events where we don&apos;t want the instructor pulled into payroll twice.</inlineHelpText>
    <label>Omit from Payroll</label>
    <type>Checkbox</type>
</CustomField>