force-app/main/default/objects/Training_Event__c/fields/Online_status__c.field-meta.xml
<CustomField>
    <fullName>Online_status__c</fullName>
    <label>Online status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>