force-app/main/default/objects/Training_Event__c/fields/Onsite_Contact__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the contact that you reach out to while onsite</inlineHelpText>
    <label>Onsite Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Training Events (Onsite Contact)</relationshipLabel>
    <relationshipName>Training_Events5</relationshipName>
    <type>Lookup</type>
</CustomField>