force-app/main/default/objects/Training_Event__c/fields/Onsite_Logistic_support_Booking_form__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Logistic_support_Booking_form__c</fullName>
    <label>Onsite Logistic support Booking form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Form Drafted</fullName>
            </value>
            <value>
                <fullName>VE Approved</fullName>
            </value>
            <value>
                <fullName>Form Sent</fullName>
            </value>
            <value>
                <fullName>Form Signed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>