force-app/main/default/objects/Training_Event__c/fields/Order_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Reference_Number__c</fullName>
    <description>This field is used to track TTT order form numbers.</description>
    <label>Order Reference Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>