force-app/main/default/objects/Training_Event__c/fields/Order_total__c.field-meta.xml
<CustomField>
    <fullName>Order_total__c</fullName>
    <label>Order total</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>