force-app/main/default/objects/Training_Event__c/fields/Participant_spots_left__c.field-meta.xml
<CustomField>
    <fullName>Participant_spots_left__c</fullName>
    <formula>18 - (No_of_Trainees__c  +  No_of_Pending__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Participant spots left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>