force-app/main/default/objects/Training_Event__c/fields/Participant_Spots_Left_ANZ__c.field-meta.xml
<CustomField>
    <fullName>Participant_Spots_Left_ANZ__c</fullName>
    <formula>25 - (No_of_Trainees__c + No_of_Pending__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Participant spots left ANZ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>