force-app/main/default/objects/Training_Event__c/fields/Per_Day_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Per_Day_Requirement__c</fullName>
    <inlineHelpText>This is the daily fee that the client will reimburse to Prosci.</inlineHelpText>
    <label>Per Day Requirement</label>
    <type>TextArea</type>
</CustomField>