force-app/main/default/objects/Training_Event__c/fields/Posting_date__c.field-meta.xml
<CustomField>
    <fullName>Posting_date__c</fullName>
    <label>Posting date</label>
    <type>Date</type>
</CustomField>