force-app/main/default/objects/Training_Event__c/fields/Pre_program_email__c.field-meta.xml
<CustomField>
    <fullName>Pre_program_email__c</fullName>
    <label>Pre-program email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>