force-app/main/default/objects/Training_Event__c/fields/Pre_Work_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Pre_Work_Due_Date__c</fullName>
    <label>Pre-Work Due Date</label>
    <type>Date</type>
</CustomField>