force-app/main/default/objects/Training_Event__c/fields/Pricing__c.field-meta.xml
<CustomField>
    <fullName>Pricing__c</fullName>
    <label>Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Standard pricing</fullName>
            </value>
            <value>
                <fullName>Special pricing</fullName>
            </value>
            <value>
                <fullName>Complimentary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>