force-app/main/default/objects/Training_Event__c/fields/Program_Debrief__c.field-meta.xml
<CustomField>
    <fullName>Program_Debrief__c</fullName>
    <label>Program Debrief</label>
    <type>Date</type>
</CustomField>