force-app/main/default/objects/Training_Event__c/fields/Program_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Program_Schedule__c</fullName>
    <label>Program Schedule</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>