force-app/main/default/objects/Training_Event__c/fields/Program_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Program_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Sponsor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Training Events (Program Sponsor)</relationshipLabel>
    <relationshipName>Training_Events2</relationshipName>
    <type>Lookup</type>
</CustomField>