force-app/main/default/objects/Training_Event__c/fields/Program_time__c.field-meta.xml
<CustomField>
    <fullName>Program_time__c</fullName>
    <label>Program time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>