force-app/main/default/objects/Training_Event__c/fields/Project_Count__c.field-meta.xml
<CustomField>
    <fullName>Project_Count__c</fullName>
    <label>Project Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>