force-app/main/default/objects/Training_Event__c/fields/Project_spots_left__c.field-meta.xml
<CustomField>
    <fullName>Project_spots_left__c</fullName>
    <formula>13 - Project_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project spots left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>