force-app/main/default/objects/Training_Event__c/fields/Project_spots_left_ANZ__c.field-meta.xml
<CustomField>
    <fullName>Project_spots_left_ANZ__c</fullName>
    <formula>20 - Project_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project spots left ANZ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>