force-app/main/default/objects/Training_Event__c/fields/Projected_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Projected_Attendance__c</fullName>
    <label>Projected Attendance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>