force-app/main/default/objects/Training_Event__c/fields/Prosci_Auditor__c.field-meta.xml
<CustomField>
    <fullName>Prosci_Auditor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prosci Auditor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Training Events (Prosci Auditor)</relationshipLabel>
    <relationshipName>Training_Events4</relationshipName>
    <type>Lookup</type>
</CustomField>