force-app/main/default/objects/Training_Event__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <label>Purchase Order</label>
    <length>25</length>
    <type>Text</type>
</CustomField>