force-app/main/default/objects/Training_Event__c/fields/Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.End_User_Company__c</valueField>
        </filterItems>
        <filterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Done - Terminated, Done - No Response, Done - Alternate Solution</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Training Events</relationshipLabel>
    <relationshipName>Training_Events</relationshipName>
    <type>Lookup</type>
</CustomField>