force-app/main/default/objects/Training_Event__c/fields/Report_ID__c.field-meta.xml
<CustomField>
    <fullName>Report_ID__c</fullName>
    <description>This is where the unique Report ID will be stored for each copy of the feedback survey (associated with a specific training event).</description>
    <label>Report ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>