force-app/main/default/objects/Training_Event__c/fields/Send_Check_in_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Check_in_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Check-in Email</label>
    <type>Checkbox</type>
</CustomField>