force-app/main/default/objects/Training_Event__c/fields/Session_Notes__c.field-meta.xml
<CustomField>
    <fullName>Session_Notes__c</fullName>
    <label>Session Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>