force-app/main/default/objects/Training_Event__c/fields/Set_of_materials__c.field-meta.xml
<CustomField>
    <fullName>Set_of_materials__c</fullName>
    <label>Set of materials</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>