force-app/main/default/objects/Training_Event__c/fields/Set_up_time__c.field-meta.xml
<CustomField>
    <fullName>Set_up_time__c</fullName>
    <label>Set-up time</label>
    <length>150</length>
    <type>Text</type>
</CustomField>