force-app/main/default/objects/Training_Event__c/fields/Sponsor_preferred_method_of_contact__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_preferred_method_of_contact__c</fullName>
    <label>Sponsor preferred method of contact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Phone only</fullName>
            </value>
            <value>
                <fullName>Email only</fullName>
            </value>
            <value>
                <fullName>No preference</fullName>
            </value>
            <value>
                <fullName>Thru admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>