force-app/main/default/objects/Training_Event__c/fields/Start_Date_Time_iCal__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time_iCal__c</fullName>
    <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(TEXT(DATETIMEVALUE( start_D_T__c )), &quot;:&quot;, &quot;&quot;) ,&quot;-&quot;,&quot;&quot;),&quot; &quot;,&quot;T&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date/Time iCal</label>
    <type>Text</type>
</CustomField>