force-app/main/default/objects/Training_Event__c/fields/Start_Time_Type__c.field-meta.xml
<CustomField>
    <fullName>Start_Time_Type__c</fullName>
    <label>Start Time Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Early</fullName>
            </value>
            <value>
                <fullName>Late</fullName>
            </value>
            <value>
                <fullName>Weekend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>