force-app/main/default/objects/Training_Event__c/fields/Start_Up_Approved__c.field-meta.xml
<CustomField>
    <fullName>Start_Up_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Start Up Approved</label>
    <type>Checkbox</type>
</CustomField>